--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.4.1
 dj-database-url==0.5.0
-Django==3.2.7
-django-extensions==3.1.3
+Django==2.1.15
+django-extensions==2.2.9
 psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.2
+whitenoise==5.3.0
